--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>qBittorrent Web UI</title>
+    <title>qBittorrent QBT_TR(Web UI)QBT_TR[CONTEXT=OptionsDialog]</title>
     <link rel="icon" type="image/png" href="images/qbittorrent32.png" />
     <link rel="icon" type="image/svg+xml" href="images/qbittorrent-tray.svg" />
     <link rel="stylesheet" type="text/css" href="css/login.css?v=${CACHEID}" />
@@ -17,26 +17,26 @@
 
 <body onLoad="themeLoad()">
     <noscript id="noscript">
-        <h1>JavaScript Required! You must enable JavaScript for the Web UI to work properly</h1>
+        <h1>QBT_TR(JavaScript Required! You must enable JavaScript for the Web UI to work properly)QBT_TR[CONTEXT=HttpServer]</h1>
     </noscript>
 	<a href="#0" id="btn-toggle" onClick="themeSwap()"></a>
     <div id="main">
-        <h1>qBittorrent Web UI</h1>
+        <h1>qBittorrent QBT_TR(Web UI)QBT_TR[CONTEXT=OptionsDialog]</h1>
         <div id="logo" class="col">
             <img src="images/qbittorrent-tray.svg" alt="qBittorrent logo" />
         </div>
         <div id="formplace" class="col">
-            <form id="loginform" method="post" onsubmit="submitLoginForm();">
+            <form id="loginform" method="post" onsubmit="submitLoginForm(event);">
                 <div class="row">
-                    <label for="username">Username</label><br />
-                    <input type="text" id="username" name="username" autocomplete="username" />
+                    <label for="username">QBT_TR(Username)QBT_TR[CONTEXT=HttpServer]</label><br />
+                    <input type="text" id="username" name="username" autocomplete="username" required />
                  </div>
                 <div class="row">
-                    <label for="password">Password</label><br />
-                    <input type="password" id="password" name="password" autocomplete="current-password" />
+                    <label for="password">QBT_TR(Password)QBT_TR[CONTEXT=HttpServer]</label><br />
+                    <input type="password" id="password" name="password" autocomplete="current-password" required />
                  </div>
                 <div class="row">
-                    <input type="submit" id="login" value="Login" />
+                    <input type="submit" id="login" value="QBT_TR(Login)QBT_TR[CONTEXT=HttpServer]" />
                 </div>
             </form>
         </div>
